src/styles/utils/_override.scss
.p-button:focus {
  box-shadow: none;
}

.language {
  .p-button.p-button-text.p-button-plain:enabled:hover {
    background: transparent;
    color: #444;
  }
}

.p-sidebar {
  background: transparent;
  box-shadow: none;
}

.p-sidebar-left {
  max-width: var(--sidebar-width);
}

.p-button.p-button-link:enabled:focus {
  box-shadow: none;
  color: #000;
}

.p-overlay-badge .p-badge {
  top: 2px;
}


.rtl {
  .n-menu-item-content__icon {
    margin-left: 8px;
    margin-right: auto !important;
  }

  .n-menu .n-submenu .n-menu-item-content {
    padding-left: 1.2rem !important;
  }

  .n-menu .n-submenu .n-submenu-children .n-menu-item .n-menu-item-content {
    padding-right: 64px;
    padding-left: 1.2rem !important;
  }

  .p-overlay-badge .p-badge {
    left: -6px;
    right: auto;
    top: 2px;
  }

  .n-pagination {
    flex-direction: row-reverse !important;
  }

  .n-data-table-expand-trigger {
    transform: rotate(180deg);
    margin-left: 8px;
    margin-right:0!important;
  }
}

